# claude-with-amazon-bedrock-ejercicios

./: .gitignore  README.md
chat-multi-input/: README.md  pyproject.toml
chat-multi-input/src/claude_with_amazon_bedrock_ejercicio_chat_multi_input/: main.py
chat-system-prompt/: README.md  pyproject.toml
chat-system-prompt/src/claude_with_amazon_bedrock_ejercicio_chat_system_prompt/: main.py
eval-data-assets/src/claude_with_amazon_bedrock_ejercicio_eval_data_assets/: main.py
prompt-eval-engineer/: .gitignore  README.md  pyproject.toml
prompt-eval-engineer/src/prompt_eval_engineer/: main.py
