[project]
name = "chat-system-prompt"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Cabello",email = "vmeca87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)"
]

[tool.poetry]
packages = [{include = "claude_with_amazon_bedrock_ejercicio_chat_system_prompt", from = "src"}]


[tool.poetry.scripts]
chat = "claude_with_amazon_bedrock_ejercicio_chat_system_prompt.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
